objects/sumoapp__ResourcePoolMember__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Priority__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Relation__c</fullName>
        <label>Relation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ResourcePool__c</fullName>
        <label>Resource Pool</label>
        <referenceTo>sumoapp__ResourcePool__c</referenceTo>
        <relationshipLabel>Resource Pool Members</relationshipLabel>
        <relationshipName>ResourcePoolMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SUMO Resource Pool Member</label>
    <nameField>
        <displayFormat>RPM-{000000}</displayFormat>
        <label>Resource Pool Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Resource Pool Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>